# spectra-rag

./: .dockerignore  .gitignore  LICENSE  README.md  docker-compose.yml  railway.json
.github/workflows/: ci.yml
backend/: go.mod  go.sum  main.go
backend/agent/: evaluator.go  evaluator_test.go  loop.go  loop_test.go
backend/cgo/: pca_bridge.go  pca_bridge_cgo.go  pca_bridge_test.go
backend/config/: config.go
backend/eval/: dataset.go  judge.go  judge_test.go  llm.go  metrics.go  metrics_test.go  pairwise.go  pairwise_test.go  retrieve.go  routing.go  routing_test.go  run.go
backend/handlers/: health.go  ingest.go  ingest_test.go  ingest_topic.go  query.go  (+3 more)
data/: compression_curve.md  eval_questions.json  eval_questions_ood.json  eval_results.md  graph.example.json  graph.json  lda_centroids.json  lda_labels.json  lda_model.json  lda_router.json  node_embeddings.json  papers.json  pca_centroids.json  pca_centroids.unsupervised.json  pca_labels.json  pca_model.json  quality_eval_results.md  quality_ood_spectra_vs_plain.md  quality_ood_spectra_vs_raw.md  routing_embeddings.json  routing_questions.json  routing_results.md
docker/: Dockerfile.backend
frontend/: .dockerignore  .env.local.example  Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
pca_engine/: CMakeLists.txt
pca_engine/include/: pca.h
pca_engine/src/: pca.cpp
pca_engine/test/: test_pca.cpp
scripts/: build_graph.py  compression_curve.py  embed_nodes.py  fetch_arxiv.py  fit_lda.py  fit_pca.py  ingest.py  lda_loocv_sweep.py  make_eval_questions.py  requirements.txt  route_model_search.py
(+55 files in other folders)
